--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -1,7 +1,14 @@
 
+.user-image{
+    width: 62px;
+    height: 62px;
+}
+.admin-photo-thumbnail{
+    width: 200px;
 
+}
 .photo-info-box{
-    border: 1px solid red;
+    border: 1px solid #e5e5e5;
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.40);
     box-shadow: 0 1px 1px rgba(0,0,0,.40);
     background-color: #fff;
@@ -11,7 +18,23 @@
 .info-box-header{
     padding: 6px;
     border-bottom: 1px solid #e5e5e5;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.40);
+    box-shadow: 0 1px 1px rgba(0,0,0,.40);
+    background-color: #fff;
+
 }
+
+.photo-info-box .box-inner .text{
+    border-top: 1px solid #e5e5e5;
+    background-color: #fff;
+    padding: 6px;
+}
+.photo-info-box .info-box-footer{
+    border-top: 1px solid #ddd;
+    background-color: #ddd;
+    padding: 10px;
+}
+
 
 
 
